# trails

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: brouter_customization_guide.md  brouter_norwegian_setup.md  current_status.md  graphhopper_3d_visualization_plugin.md  graphhopper_custom_snapping_plugin.md  graphhopper_customization_guide.md  graphhopper_implementation_proposals.md  graphhopper_offline_norwegian_setup.md  graphhopper_setup_guide.md  implementation_plan.md  norwegian_land_cover_ar5_ar50_guide.md  qgis_trail_routing_setup.md  snap_to_trail_comparison.md  trail_planning_tools_comparison.md  trail_routing_architecture_guide.md  wanderer_analysis.md
notebooks/: 01_hello_world.ipynb  02_norway_trails_exploration.ipynb  03_gpx_export_for_outdooractive.ipynb
plan/pipeline/: DECISIONS.md  error-handling-validation.md  key-questions.md  project-structure.md  turrutebasen-attributes-for-routing.md
src/trails/: __init__.py
src/trails/analysis/: describe.py
src/trails/io/: cache.py
src/trails/io/export/: __init__.py  area_selector.py  gpx.py
src/trails/io/sources/: __init__.py  geonorge.py  geonorge_codes.md  geonorge_codes.py  geonorge_schema.py  geonorge_translations.py  language.py
src/trails/utils/: __init__.py  geo.py  hello.py
tests/: conftest.py
tests/fixture_generators/: __init__.py
tests/fixture_generators/trails/: __init__.py
tests/fixture_generators/trails/io/: __init__.py
tests/fixture_generators/trails/io/sources/: __init__.py  geonorge.py
tests/fixtures/trails/io/sources/geonorge/: turrutebasen_atom_feed.xml
tests/trails/: __init__.py
tests/trails/analysis/: __init__.py  test_describe.py
tests/trails/io/: __init__.py  test_cache.py
tests/trails/io/sources/: test_geonorge.py  test_geonorge_codes.py  test_geonorge_integration.py
tests/trails/processing/: __init__.py
tests/trails/utils/: __init__.py  test_geo.py  test_hello.py
tests/trails/visualization/: __init__.py
