[project]
name = "trails"
version = "0.1.0"
description = "Analysis of hiking trail data using Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "geopandas>=1.0.0",
    "matplotlib>=3.8.0",
    "folium>=0.17.0",
    "feedparser>=6.0.12",
    "pyarrow>=21.0.0",
]

[dependency-groups]
jupyter = [
    "jupyterlab>=4.2.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "nbqa>=1.9.1",
    "pre-commit>=4.3.0",
    "nbstripout>=0.8.1",
    "pandas-stubs>=2.3.2.250827",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trails"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests that require network access (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow running",
]
